# bloch

./: .gitignore  CMakeLists.txt  Makefile  README.md
python/: test_alsop.py  test_cardiac.py  test_fse.py
src/: bloch_utilities.cpp  bloch_utilities.hpp  bloch_wrap.cpp  cardiac_sat.cpp  cardiac_sat.hpp  echotrain_alsop.cpp  echotrain_alsop.hpp  echotrain_cpmg.cpp  echotrain_cpmg.hpp  echotrain_gibbons.cpp  echotrain_gibbons.hpp  echotrain_lrx.cpp  echotrain_lrx.hpp  leroux.cpp  leroux.hpp  numpy_wrappers.cpp  numpy_wrappers.hpp  rf_pulses.cpp  rf_pulses.hpp  rf_tools.cpp  rf_tools.hpp
